Labs/aula_dada/lab1/tarefa2/calc4.atg
COMPILER Calc4

CHARACTERS
    digito = "0123456789".

TOKENS
    num = digito { digito } [ "." { digito } ]
        | "." digito { digito }.

IGNORE '\t'+'\r'

PRODUCTIONS
    Calc4 = Linha { Linha }.
    Linha = "calc" Exp "\n".
    Exp = Termo { ("+"|"-") Termo }.
    Termo = Unario { ("*"|"/") Unario }.
    Unario = Fator { "!" }.
    Fator = num | "(" Exp ")" | "abs" "(" Exp ")".

END Calc4.
